= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

_No changes since previous release._

== 2.3.11 (2024-01-23) - @mojavelinux

Enhancements::

* upgrade prawn-svg dependency to 0.33.x (PR #2469)

Improvements::

* extract shared `smallcaps` method from `TextTransform#smallcaps_pcdata` to make it easier to override
* assign node to `@node` instance variable on table instance to make it easer to access from Prawn::Table extension (#2471)

Bug Fixes::

* ensure color spaces are set on page before adding running content (#2477)

=== Details

{url-repo}/releases/tag/v2.3.11[git tag] | {url-repo}/compare/v2.3.10\...v2.3.11[full diff]

== 2.3.10 (2023-12-04) - @mojavelinux

Bug Fixes::

* show dot leaders in TOC entry if toclevels is increased for a given section (#2441)
* decouple tests from path of PWD (#2444)
* consider inherited styles when analyzing glyphs for fallback font support (#2463)
* add fallback character for placeholder character when using AFM font (#2453)
* don't advance image that's first child of block at top of page if image is taller than page (#2012)

=== Details

{url-repo}/releases/tag/v2.3.10[git tag] | {url-repo}/compare/v2.3.9\...v2.3.10[full diff]

== 2.3.9 (2023-06-28) - @mojavelinux

Bug Fixes::

* correctly align block image in raster format in column when align is right or center and page columns are enabled (#2433)
* honor table caption end placement (`table-caption-end` theme key) when `unbreakable` (or `breakable`) option is set on table (#2434)

=== Details

{url-repo}/releases/tag/v2.3.9[git tag] | {url-repo}/compare/v2.3.8\...v2.3.9[full diff]

== 2.3.8 (2023-06-25) - @mojavelinux

Improvements::
